--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -99,7 +99,7 @@
   padding-right: 16px;
 }
 
-@media screen and (min-width: 847px){
+@media screen and (min-width: 930px){
   .page-content {
     flex-direction: row;
   }
@@ -190,7 +190,7 @@
     padding-bottom: 0;
   }
   .padding-responsive {
-    padding-left: 0;
-    padding-right: 0;
+    padding-left: 1rem;
+    padding-right: 1rem;
   }
 }
